--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,14 +4,12 @@
 }
 
 .sidebar {
-  padding-top: 3vmin;
   position: fixed;
   top: 15vmin;
   background-color: #E3E3E3;
   font-size: 2vmin;
   font-weight: bold;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .main {
@@ -22,5 +20,4 @@
   height: 100vh;
   font-size: 1.3em;
   font-weight: bold;
-  background-color: white;
 }
